# sentry_max

./: .editorconfig  .env.example  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.agents/: BLOCKERS.md  BOARD.md  DECISIONS.md  HANDOFF.md
.github/: CODEOWNERS  pr_body.md
apps/api-node/: Dockerfile  package.json  tsconfig.json
apps/api-node/src/: env.ts  index.ts
apps/api-node/test/: health.test.ts  public-redaction.test.ts  (+1 more)
apps/api-py/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api-py/src/ignislink_api/: __init__.py  contracts.py  database.py  db.py  dispatch_logic.py  kafka_io.py  main.py  onnx_loader.py  redis.py  settings.py  spread_post.py
apps/api-py/src/ignislink_api/routes/: detections.py  dispatch.py  earthquakes.py  floods.py  health.py  predict.py
apps/api-py/src/sentry_max_api/: __init__.py  database.py  db.py  dispatch_logic.py  hazard_math.py  main.py  observability.py  redis.py  settings.py  spread_post.py
apps/api-py/src/sentry_max_api/routes/: detections.py  dispatch.py  earthquakes.py  floods.py  health.py  predict.py
apps/api-py/tests/: test_contract_codegen.py  test_contracts.py  test_dispatch_logic.py  test_hazard_math.py  test_health.py  test_predict.py  test_ready.py  test_routes_smoke.py
apps/web/: .env.local.example  README.md  components.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/worker/: Dockerfile  README.md  __main__.py  package.json  pyproject.toml
apps/worker/fixtures/: firms_sample.csv  usgs_quakes_sample.geojson  usgs_water_sample.json
apps/worker/migrations/: 0001_base_tables.sql  0002_hypertables.sql  0003_aggregations.sql
apps/worker/src/: main.py
apps/worker/src/bullmq/: index.ts  webhook-fanout.ts
apps/worker/src/common/: __init__.py  config.py  geo.py  kafka.py  logging.py
apps/worker/src/ignislink_worker/: __init__.py  celery_app.py
apps/worker/src/ignislink_worker/firms/: __init__.py  tasks.py
apps/worker/src/ignislink_worker/outbox/: __init__.py  tasks.py
apps/worker/src/ignislink_worker/verification/: __init__.py  tasks.py
apps/worker/src/sinks/: __init__.py  postgres.py
apps/worker/src/sources/: __init__.py  firms.py  usgs_quakes.py  usgs_water.py
apps/worker/src/spark/: __init__.py  aggregations.py
apps/worker/test/: bullmq-boot.test.ts
apps/worker/tests/: test_celery_boot.py  test_firms_dedup.py  test_geo.py  test_usgs_parse.py
docs/: PRD.md  ml-model-card.md  runbook.md
infra/: README.md  docker-compose.yml
infra/kafka/: topics.sh
infra/prometheus/: prometheus.yml
infra/sql/: 0001_init.sql  0002_seed.sql
ml/: README.md  conftest.py  requirements.txt
ml/__tests__/: test_aftershock.py  test_dataset.py  test_export_onnx.py  test_flood_ealstm.py  test_losses.py  test_rothermel.py  test_smoke_train.py  test_unet_convlstm.py
ml/models/: __init__.py  aftershock_etas_npp.py  flood_ealstm.py  rothermel.py  unet_convlstm.py
ml/training/: __init__.py  dataset.py  eval.py  export_onnx.py  losses.py  train.py
scripts/: restart.sh
(+94 files in other folders)
