[project]
name = "ignislink-api-py"
version = "0.0.1"
description = "FastAPI service for IgnisLink ingestion, ML inference, and dispatch orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.1.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "mypy>=1.12.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ignislink_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ignislink_api"]
