[project]
name = "ignislink-worker"
version = "0.0.1"
description = "Celery workers for IgnisLink ingestion, verification, enrichment, and outbox jobs."
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.1.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ignislink_worker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
